# GithubProof

./: README.md  pyproject.toml
src/profile_audit/: cli.py  collectors.py  github_api.py  metrics.py  models.py  pipeline.py  plotting.py  progress.py  reporting.py  rules.py
src/profile_audit/config/: contribution_rules.yaml  star_rules.yaml
tests/: test_collectors_edge_cases.py  test_github_api.py  test_metrics.py  test_repository_ordering.py  test_rules.py
