[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "github-proof"
version = "0.1.0"
description = "GitHubProof: deterministic GitHub contribution and star-credibility audit CLI."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.0.0",
]

[project.optional-dependencies]
plots = [
  "matplotlib>=3.8.0",
]

[project.scripts]
github-proof = "profile_audit.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
